legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc482/save_st/pr71426.c-4.8.2-2.out.txt
pr71426.c:5:14: error: ‘x’ undeclared here (not in a function)
 int f (int x[x - x ()]);  
              ^
pr71426.c:5: confused by earlier errors, bailing out
